# src/model/MarkdownHeaderDto.ts
@@ -1,6 +1,7 @@
 export default interface MarkdownHeader {
     title: string;
     type: "ARTICLE" | "BLOG" | "DOCUMENTATION";
+    categories: string[];
     description: string;
     author: string;
     date: string;
